Sutter Health/src/objects/Safety_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Q1_Other__c</fullName>
        <label>Q1 Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <label>Question 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>This is easier to use</fullName>
                </value>
                <value>
                    <fullName>About the same to use</fullName>
                </value>
                <value>
                    <fullName>More difficult to use</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Safety_Reporting__c</fullName>
        <label>Safety Reporting</label>
        <referenceTo>Safety_Reporting__c</referenceTo>
        <relationshipLabel>Safety Survey&apos;s</relationshipLabel>
        <relationshipName>Safety_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Suggestions__c</fullName>
        <label>Suggestions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Safety Survey</label>
    <nameField>
        <displayFormat>SafetySurvey-{000000000}</displayFormat>
        <label>Safety Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safety Survey&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>